--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-plugin-root-import": "^6.6.0",
     "react": "18.2.0",
     "react-native": "0.71.8"
   },
