--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-root-import": "^6.6.0",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-safe-area-context": "^3.4.1",
+    "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
