--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@redux-devtools/extension": "^3.2.5",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-root-import": "^6.6.0",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-safe-area-context": "^3.4.1",
-    "react-native-svg": "^12.1.1"
+    "react-native-svg": "^12.5.1",
+    "react-redux": "^8.1.2",
+    "redux-devtools": "^3.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -33,6 +37,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.8.8",
+    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
